@@ -114,6 +114,9 @@ Release 2.1.2 - UNRELEASED
 
     YARN-1215. Yarn URL should include userinfo. (Chuan Liu via cnauroth)
 
+    YARN-1262. TestApplicationCleanup relies on all containers assigned in a
+    single heartbeat (Karthik Kambatla via Sandy Ryza)
+
 Release 2.1.1-beta - 2013-09-23
 
   INCOMPATIBLE CHANGES
